# unitree_b2_study

doc/: B2开发文档.md  debug_log.md  mcl定位.md  学习.md  思考.md  无标题文档 1
src/01.helloworld/b2_helloworld/: CMakeLists.txt  package.xml
src/01.helloworld/b2_helloworld/src/: helloworld.cpp
src/02.base/b2_description/: CMakeLists.txt  package.xml
src/02.base/b2_description/launch/: display.launch.py
src/02.base/b2_description/urdf/: b2_description.urdf
src/02.base/b2_driver/launch/: driver.launch.py
src/02.base/b2_driver/params/: driver.yaml
src/02.base/b2_driver/rviz/: display.rviz
src/02.base/b2_driver/src/: driver.cpp
src/02.base/b2_teleop_ctrl_keyboard/: package.xml  setup.py
src/b2_description/: CMakeLists.txt  package.xml
src/b2_description/launch/: display.launch.py
src/b2_description/urdf/: b2_description.urdf
src/b2_description/world/room/: model.sdf
src/b2_driver/: CMakeLists.txt  package.xml
src/b2_driver/rviz/: display.rviz
src/b2_teleop_ctrl_keyboard/: setup.cfg
src/b2_teleop_ctrl_keyboard/b2_teleop_ctrl_keyboard/: b2_teleop_ctrl_keyboard.py
src/b2_twist_bridge/: CMakeLists.txt  package.xml
src/b2_twist_bridge/include/b2_twist_bridge/: sport_model.hpp
src/b2_twist_bridge/src/: twist_bridge.cpp
src/pointcloud/: CMakeLists.txt  package.xml
src/pointcloud/config/: parameters.yaml
src/pointcloud/src/: pcd_intensity_filter.cpp  pointcloud2_to_pcd.cpp
